fixed form alignment issue

--- a/src/app/pages/dealer-registration/dealer-registration.component.css
+++ b/src/app/pages/dealer-registration/dealer-registration.component.css
@@ -219,6 +219,10 @@ input::placeholder {
     ::ng-deep .ng-select .ng-select-container .ng-value-container .ng-placeholder{
         font-size: 18px;
     }
+    ::ng-deep .ng-select.ng-select-single .ng-select-container{
+        min-height: 39px;
+        height: 39px;
+    }
     .btn-back{
         margin-right: 8px;
         padding: 0.375rem 5rem;
